[package]
name = "iln_airdrop"
version = "0.1.0"
authors = ["Jorian <jorian@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komodo_rpc_client = { git = "https://github.com/jorian/komodorpc-rust-client" }